--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "node server",
+    "koa-dev": "node koa-server",
     "start": "cross-env NODE_ENV=production node server",
     "build": "npm run build:client && npm run build:server",
     "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
@@ -14,6 +15,11 @@
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "firebase": "^2.4.2",
+    "koa": "^2.0.0-alpha.7",
+    "koa-favicon": "^2.0.0",
+    "koa-router": "^7.0.1",
+    "koa-static": "^3.0.0",
+    "koa-write": "0.0.2",
     "lru-cache": "^4.0.1",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
