--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,9 @@
 {
   "presets": [
-    ["es2015", { "modules": false }],
-    "stage-2"
+    ["es2015"],
+    "stage-0"
+  ],
+  "plugins": [
+    "transform-async-to-generator"
   ]
 }
