--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.16.0",
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "firebase": "^2.4.2",
@@ -21,6 +22,7 @@
     "koa-static": "^3.0.0",
     "koa-write": "0.0.2",
     "lru-cache": "^4.0.1",
+    "promisify-node": "^0.4.0",
     "serialize-javascript": "^1.3.0",
     "serve-favicon": "^2.3.0",
     "vue": "^2.0.0",
